namespaces/student/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: main
spec:
  ports:
  - name: cdn
    port: 80
  - name: ide
    port: 8080
  selector:
    app: main
